[package]
name = "sw25_growth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys="^0.3"
wasm-bindgen="^0.2"
wasm-bindgen-futures = "^0.4"

[dependencies.isaribi]
version = "^0.2"

[dependencies.kagura]
version = "^0.14"

[dependencies.nusa]
version = "^0.1"

[dependencies.web-sys]
version="^0.3"
features=[]
